<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_zt_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fxbackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/pad_10"
                    android:layout_height="@dimen/pad_20"
                    android:background="@drawable/fanhuibai" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                style="@style/top_msg"
                android:background="@drawable/xinfengbai" />
        </LinearLayout>

        <WebView
            android:id="@+id/frame_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></WebView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/huise" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/analyze_ll_sy"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgsy"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shouyi_selected" />

                <TextView
                    android:id="@+id/analyze_sy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shouyi"
                    android:textColor="@drawable/text_selected" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/analyze_ll_jy"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgjy"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:background="@drawable/jypl_selected" />

                <TextView
                    android:id="@+id/analyze_jy_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jiaoyipl"
                    android:textColor="@drawable/text_selected" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/analyze_ll_pf"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgpf"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/fenxi_selected" />

                <TextView
                    android:id="@+id/analyze_pf_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userpf"
                    android:textColor="@drawable/text_selected"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/analyze_ll_zd"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgzd"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/zdqk_selected" />

                <TextView
                    android:id="@+id/analyze_zd_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zuodanqk"
                    android:textColor="@drawable/text_selected" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/analyze_ll_fx"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgfx"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:background="@drawable/fxpg_selected" />
                </LinearLayout>

                <TextView
                    android:id="@+id/analyze_fx_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fengxianpg"
                    android:textColor="@drawable/text_selected" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>